--- a/src/modules/Interface/Interface.css
+++ b/src/modules/Interface/Interface.css
@@ -2,7 +2,7 @@
 
 /* GLOBALS */
 
-:root {
+body {
   --color-frame: #2b2b2b;
   --color-todo: #ffffff;
   --color-sidebar: #e8e8e8;
@@ -14,11 +14,27 @@
   --color-confirm-button-hover: #5ae338;
   --color-highlight1: #ff1493;
   --color-highlight1-hover: #ff4dac;
-  /* --color-highlight1-hover-filter: invert(44%) sepia(56%) saturate(2068%) hue-rotate(301deg) brightness(102%) contrast(103%); */
   --color-list-highlight: #d9d9d9;
   --color-count-background: #c5c5c5;
-  /* --color-count-background-highlighted: rgb(237, 237, 237); */
-  /* --color-count-background-highlighted: #ff4dac; */
+  --color-todo-item-border: #c7c7c7;
+  --button-box-shadow: 1px 1px 4px #ababab;
+}
+
+body.dark-mode {
+  --color-frame: #232323;
+  --color-todo: #424242;
+  --color-sidebar: #3b3b3b;
+  --color-text: #e3e3e3;
+  --color-text-lighter: #d2d2d2;
+  --color-cancel-button: #ff2121;
+  --color-cancel-button-hover: #de1d1d;
+  --color-confirm-button: #6fff4b;
+  --color-confirm-button-hover: #5ae338;
+  --color-highlight1: #ff1493;
+  --color-highlight1-hover: #ff4dac;
+  --color-list-highlight: #d9d9d9;
+  --color-count-background: #747474;
+  --color-todo-item-border: #c7c7c7;
   --button-box-shadow: 1px 1px 4px #ababab;
 }
 
