--- a/src/modules/Interface/Interface.css
+++ b/src/modules/Interface/Interface.css
@@ -17,25 +17,33 @@ body {
   --color-list-highlight: #d9d9d9;
   --color-count-background: #c5c5c5;
   --color-todo-item-border: #c7c7c7;
+  --color-project-item-edit: rgb(248, 248, 248);
+  --color-icon-strong: invert(0%);
+  --color-icon-fainter: invert(35%);
+  --color-icon-hover: invert(0%);
   --button-box-shadow: 1px 1px 4px #ababab;
 }
 
 body.dark-mode {
-  --color-frame: #232323;
-  --color-todo: #424242;
-  --color-sidebar: #3b3b3b;
+  --color-frame: #1f1f1f;
+  --color-todo: #252525;
+  --color-sidebar: #2f2f2f;
   --color-text: #e3e3e3;
   --color-text-lighter: #d2d2d2;
-  --color-cancel-button: #ff2121;
-  --color-cancel-button-hover: #de1d1d;
-  --color-confirm-button: #6fff4b;
-  --color-confirm-button-hover: #5ae338;
-  --color-highlight1: #ff1493;
-  --color-highlight1-hover: #ff4dac;
-  --color-list-highlight: #d9d9d9;
-  --color-count-background: #747474;
-  --color-todo-item-border: #c7c7c7;
-  --button-box-shadow: 1px 1px 4px #ababab;
+  /* --color-cancel-button: #ff2121; */
+  /* --color-cancel-button-hover: #de1d1d; */
+  /* --color-confirm-button: #6fff4b; */
+  /* --color-confirm-button-hover: #5ae338; */
+  /* --color-highlight1: #ff1493; */
+  /* --color-highlight1-hover: #ff4dac; */
+  --color-list-highlight: #515151;
+  --color-count-background: #606060;
+  --color-todo-item-border: #3c3c3c;
+  --color-project-item-edit: #3f3f3f;
+  --color-icon-strong: invert(100%);
+  --color-icon-fainter: invert(80%);
+  --color-icon-hover: invert(100%);
+  --button-box-shadow: 1px 1px 4px #000000;
 }
 
 *,
