--- a/src/modules/Interface/Interface.css
+++ b/src/modules/Interface/Interface.css
@@ -18,6 +18,7 @@ body {
   --color-count-background: #c5c5c5;
   --color-todo-item-border: #c7c7c7;
   --color-project-item-edit: rgb(248, 248, 248);
+  --color-sidebar-shadow: #8e8e8e;
   --color-icon-strong: invert(0%);
   --color-icon-fainter: invert(35%);
   --color-icon-hover: invert(0%);
@@ -30,16 +31,11 @@ body.dark-mode {
   --color-sidebar: #2f2f2f;
   --color-text: #e3e3e3;
   --color-text-lighter: #d2d2d2;
-  /* --color-cancel-button: #ff2121; */
-  /* --color-cancel-button-hover: #de1d1d; */
-  /* --color-confirm-button: #6fff4b; */
-  /* --color-confirm-button-hover: #5ae338; */
-  /* --color-highlight1: #ff1493; */
-  /* --color-highlight1-hover: #ff4dac; */
   --color-list-highlight: #515151;
   --color-count-background: #606060;
   --color-todo-item-border: #3c3c3c;
   --color-project-item-edit: #3f3f3f;
+  --color-sidebar-shadow: #212121;
   --color-icon-strong: invert(100%);
   --color-icon-fainter: invert(80%);
   --color-icon-hover: invert(100%);
