--- a/src/modules/Interface/Main/Content/Content.css
+++ b/src/modules/Interface/Main/Content/Content.css
@@ -12,7 +12,7 @@
 
 .content:hover::-webkit-scrollbar-thumb {
   /* opacity: 1; */
-  background-color: rgba(0, 0, 0, 0.301);
+  background-color: var(--color-scrollbar);
 }
 
 /* UTILITY */
