--- a/src/modules/Interface/Main/Sidebar/Sidebar.css
+++ b/src/modules/Interface/Main/Sidebar/Sidebar.css
@@ -220,7 +220,7 @@
 }
 
 .sidebar:hover::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.301);
+  background-color: var(--color-scrollbar);
 }
 
 /* NEW PROJECT POPUP */
