--- a/src/modules/Interface/Interface.css
+++ b/src/modules/Interface/Interface.css
@@ -6,6 +6,7 @@ body {
   --color-frame: #2b2b2b;
   --color-todo: #ffffff;
   --color-sidebar: #e8e8e8;
+  --color-modal-window: #ffffff;
   --color-text: #000000;
   --color-text-lighter: #535353;
   --color-cancel-button: #ff2121;
@@ -17,8 +18,8 @@ body {
   --color-list-highlight: #d9d9d9;
   --color-count-background: #c5c5c5;
   --color-todo-item-border: #c7c7c7;
-  --color-project-item-edit: rgb(248, 248, 248);
-  --color-sidebar-shadow: #8e8e8e;
+  --color-project-item-edit: #f8f8f8;
+  --color-sidebar-shadow: #b2b2b2;
   --color-scrollbar: rgba(0, 0, 0, 0.307);
   --color-icon-strong: invert(0%);
   --color-icon-fainter: invert(35%);
@@ -29,7 +30,8 @@ body {
 body.dark-mode {
   --color-frame: #1f1f1f;
   --color-todo: #252525;
-  --color-sidebar: #2f2f2f;
+  --color-sidebar: #2b2b2b;
+  --color-modal-window: #343434;
   --color-text: #e3e3e3;
   --color-text-lighter: #d2d2d2;
   --color-list-highlight: #515151;
@@ -41,7 +43,7 @@ body.dark-mode {
   --color-icon-strong: invert(100%);
   --color-icon-fainter: invert(80%);
   --color-icon-hover: invert(100%);
-  --button-box-shadow: 1px 1px 4px #000000;
+  --button-box-shadow: 1px 1px 4px #1b1b1b;
 }
 
 *,
