--- a/src/modules/Interface/Main/Content/TodoModal/TodoModal.css
+++ b/src/modules/Interface/Main/Content/TodoModal/TodoModal.css
@@ -1,5 +1,5 @@
 .todo-modal-background {
-  background-color: rgba(0, 0, 0, 0.399);
+  /* background-color: rgba(0, 0, 0, 0.399); */
   z-index: 1;
   grid-area: 1 / 1 / 2 / 2;
   display: flex;
@@ -7,10 +7,12 @@
   align-items: center;
   position: relative;
   /* height: 100%; */
+  /* filter: blur(25px); */
 }
 
 .modal-window {
-  background-color: var(--color-todo);
+  /* background-color: var(--color-todo); */
+  background-color: var(--color-modal-window);
   height: 300px;
   width: 550px;
   position: fixed;
@@ -22,6 +24,7 @@
   grid-template-columns: repeat(2, 1fr);
   row-gap: 1rem;
   column-gap: 1rem;
+  border: 1px solid var(--color-todo-item-border);
 }
 
 .modal-window-header {
@@ -90,7 +93,6 @@
 #projects-input {
   border: 1px solid var(--color-todo-item-border);
   border-radius: 3px;
-  color: var(--color-text);
 }
 
 .save-btn,
