--- a/src/modules/Interface/Main/Content/TodoList/TodoItem/TodoItem.css
+++ b/src/modules/Interface/Main/Content/TodoList/TodoItem/TodoItem.css
@@ -72,11 +72,11 @@
 }
 
 .completed > .todo-item-top > .todo-item-title {
-  color: rgba(0, 0, 0, 0.256);
+  color: var(--color-text-completed-task);
   text-decoration: line-through;
 }
 .completed > .todo-item-bottom {
-  color: rgba(0, 0, 0, 0.256);
+  color: var(--color-text-completed-task);
 }
 
 /* BOTTOM SECTION */
