Fixed bug where items wouldn't be crossed off after a page reload

--- a/src/modules/Interface/Interface.css
+++ b/src/modules/Interface/Interface.css
@@ -5,7 +5,7 @@
 body {
   --color-frame: #2b2b2b;
   --color-todo: #ffffff;
-  --color-sidebar: #e8e8e8;
+  --color-sidebar: #ebebeb;
   --color-modal-window: #ffffff;
   --color-text: #000000;
   --color-text-lighter: #535353;
