--- a/src/modules/Interface/Main/Sidebar/Sidebar.css
+++ b/src/modules/Interface/Main/Sidebar/Sidebar.css
@@ -88,6 +88,7 @@
   justify-content: center;
   align-items: center;
   filter: var(--color-icon-fainter);
+  padding-right: 0.18rem;
 }
 
 .edit-projects-icon {
