Confirm new project name on outside clicks

--- a/src/modules/Interface/Interface.css
+++ b/src/modules/Interface/Interface.css
@@ -19,7 +19,7 @@ body {
   --color-list-highlight: #d9d9d9;
   --color-count-background: #c5c5c5;
   --color-todo-item-border: #c7c7c7;
-  --color-project-item-edit: #f8f8f8;
+  --color-project-item-edit: #ffffff;
   --color-sidebar-shadow: #cecece;
   --color-scrollbar: rgba(0, 0, 0, 0.307);
   --color-icon-strong: invert(0%);
