--- a/src/modules/Interface/Header/Header.css
+++ b/src/modules/Interface/Header/Header.css
@@ -57,7 +57,7 @@
   height: 25px;
   position: relative;
   display: block;
-  background: #ebebeb;
+  background: #d7d7d7;
   border-radius: 200px;
   cursor: pointer;
 }
@@ -70,7 +70,7 @@
   top: 1px;
   left: 1px;
   /* background: linear-gradient(180deg, #ffcc89, #d8860b); */
-  background: rgb(29, 29, 29);
+  background: rgb(96, 96, 96);
   border-radius: 180px;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
 }
@@ -82,13 +82,13 @@
 }
 
 #dark-mode-toggle-input:checked + .dark-mode-toggle-label {
-  background: #242424;
+  background: #818181;
 }
 #dark-mode-toggle-input:checked + .dark-mode-toggle-label:after {
   left: 49px;
   transform: translateX(-100%);
   /* background: linear-gradient(180deg, #777, #3a3a3a); */
-  background: rgb(155, 155, 155);
+  background: rgb(56, 56, 56);
 }
 .dark-mode-toggle-label,
 .dark-mode-toggle-label:after {
