--- a/src/modules/Interface/Header/Header.css
+++ b/src/modules/Interface/Header/Header.css
@@ -57,20 +57,22 @@
   height: 25px;
   position: relative;
   display: block;
-  background: #d7d7d7;
+  background: #c7dce3;
   border-radius: 200px;
   cursor: pointer;
+  box-shadow: 2px 2px 5px rgb(22, 22, 22), inset 5px 0px 5px 0px rgb(80, 80, 80);
+  border: 1px solid rgb(166, 166, 166);
 }
 
 .dark-mode-toggle-label:after {
   content: "";
-  width: 23px;
-  height: 23px;
+  width: 21px;
+  height: 21px;
   position: absolute;
   top: 1px;
   left: 1px;
   /* background: linear-gradient(180deg, #ffcc89, #d8860b); */
-  background: rgb(96, 96, 96);
+  background: rgb(80, 80, 80);
   border-radius: 180px;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
 }
@@ -82,13 +84,13 @@
 }
 
 #dark-mode-toggle-input:checked + .dark-mode-toggle-label {
-  background: #818181;
+  background: #6b6b6b;
 }
 #dark-mode-toggle-input:checked + .dark-mode-toggle-label:after {
-  left: 49px;
+  left: 48px;
   transform: translateX(-100%);
   /* background: linear-gradient(180deg, #777, #3a3a3a); */
-  background: rgb(56, 56, 56);
+  background: var(--color-frame);
 }
 .dark-mode-toggle-label,
 .dark-mode-toggle-label:after {
@@ -116,14 +118,14 @@
 .sun-icon {
   top: 2px;
   left: 2px;
-  width: 20px;
+  width: 18px;
   filter: invert(89%) sepia(58%) saturate(815%) hue-rotate(336deg) brightness(104%) contrast(103%);
 }
 
 .moon-icon {
-  top: 3px;
-  left: 27px;
-  width: 18px;
+  top: 4px;
+  left: 29px;
+  width: 15px;
   filter: invert(89%) sepia(58%) saturate(815%) hue-rotate(336deg) brightness(104%) contrast(103%);
 }
 
