--- a/src/modules/Interface/Main/Content/TodoList/TodoList.css
+++ b/src/modules/Interface/Main/Content/TodoList/TodoList.css
@@ -49,3 +49,19 @@
 .blur {
   filter: blur(5px);
 }
+
+/* ANIMATIONS */
+.slide-in-animation {
+  animation-name: slideIn;
+  animation-duration: 0.25s;
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateX(-300px);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
