Added animations for color, sidebar and modal window

--- a/src/modules/Interface/Header/Header.css
+++ b/src/modules/Interface/Header/Header.css
@@ -90,7 +90,7 @@
   left: 48px;
   transform: translateX(-100%);
   /* background: linear-gradient(180deg, #777, #3a3a3a); */
-  background: var(--color-frame);
+  background: black;
 }
 .dark-mode-toggle-label,
 .dark-mode-toggle-label:after {
