--- a/src/modules/Interface/Main/Content/TodoList/TodoList.css
+++ b/src/modules/Interface/Main/Content/TodoList/TodoList.css
@@ -6,6 +6,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  transition: background-color 0.25s;
 }
 
 .todo-list {
@@ -51,7 +53,7 @@
 }
 
 /* ANIMATIONS */
-.slide-in-animation {
+/* .slide-in-animation {
   animation-name: slideIn;
   animation-duration: 0.25s;
 }
@@ -64,4 +66,4 @@
   100% {
     transform: translateX(0);
   }
-}
+} */
