--- a/src/modules/Interface/Main/Sidebar/Sidebar.css
+++ b/src/modules/Interface/Main/Sidebar/Sidebar.css
@@ -9,6 +9,11 @@
   box-shadow: 2px 5px 5px 1px var(--color-sidebar-shadow);
   margin-right: 10px;
   border-left: 15px solid var(--color-highlight1-hover);
+  transition: background-color 0.1s;
+  transition: box-shadow 0.1s;
+  /* transform: translateX(0); */
+  animation-name: slideIn;
+  animation-duration: 0.25s;
 }
 
 .sidebar-icon {
@@ -326,12 +331,12 @@
   }
 }
 
-/* MEDIA QUERIES */
-
 .slide-in-animation {
   animation-name: slideIn;
   animation-duration: 0.25s;
 }
+
+/* MEDIA QUERIES */
 
 @media only screen and (max-width: 900px) {
   .sidebar {
