--- a/src/modules/Interface/Main/Sidebar/Sidebar.css
+++ b/src/modules/Interface/Main/Sidebar/Sidebar.css
@@ -319,6 +319,8 @@
 .in-edit-mode {
   background-color: var(--color-project-item-edit) !important;
   /* border: 1px solid rgb(151, 151, 151); */
+  animation-name: slideInShort;
+  animation-duration: 0.15s;
 }
 /* ANIMATIONS */
 @keyframes slideIn {
@@ -331,10 +333,20 @@
   }
 }
 
-.slide-in-animation {
+@keyframes slideInShort {
+  0% {
+    transform: translateX(-100px);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+/* .slide-in-animation {
   animation-name: slideIn;
   animation-duration: 0.25s;
-}
+} */
 
 /* MEDIA QUERIES */
 
