--- a/src/modules/Interface/Main/Sidebar/Sidebar.css
+++ b/src/modules/Interface/Main/Sidebar/Sidebar.css
@@ -113,7 +113,7 @@
   border-radius: 5px;
   height: 33px;
   margin-left: 1rem;
-  width: 100%;
+  /* width: 100%; */
 }
 
 .project-button:hover {
@@ -124,6 +124,8 @@
 .project-name-input {
   margin: 0 0 0 0.5rem;
   flex-grow: 1;
+  /* max-width: 100%; */
+  width: 100px;
 }
 
 .in-edit-mode > .project-name-input {
